gcc/testsuite/rust/rustc/ui/error-codes/E0262.rs
fn foo<'static>(x: &'static str) { } // { dg-error ".E0262." "" { target *-*-* } }
// { dg-error "" "" { target *-*-* } .-2 }

fn main() {}

